fix FCollection (#6657)