@@ -1,32 +1,30 @@
 package forge.util.collect;
 
 import java.io.Serializable;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.function.Predicate;
 
-import com.google.common.base.Supplier;
-import com.google.common.base.Suppliers;
 import org.apache.commons.lang3.ArrayUtils;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Ordering;
-import com.google.common.collect.Sets;
 
 /**
  * Collection with unique elements ({@link Set}) that maintains the order in
  * which the elements are added to it ({@link List}).
- * <p>
+ *
  * This object is serializable if all elements it contains are.
  *
  * @param <T> the type of the elements this collection contains.
@@ -34,7 +32,6 @@ import com.google.common.collect.Sets;
  */
 public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, Cloneable, Serializable {
     private static final long serialVersionUID = -1664555336364294106L;
-    private final Object lock = new Object();
 
     private static final FCollection<?> EMPTY = new EmptyFCollection<>();
 
@@ -46,12 +43,12 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     /**
      * The {@link Set} representation of this collection.
      */
-    private final Supplier<Set<T>> set = Suppliers.memoize(Sets::newHashSet);
+    private final Set<T> set = Collections.synchronizedSet(new HashSet<>());
 
     /**
      * The {@link List} representation of this collection.
      */
-    private final Supplier<LinkedList<T>> list = Suppliers.memoize(Lists::newLinkedList);
+    private final List<T> list = Collections.synchronizedList(new ArrayList<>());
 
     /**
      * Create an empty {@link FCollection}.
@@ -62,7 +59,8 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     /**
      * Create an {@link FCollection} containing a single element.
      *
-     * @param e the single element the new collection contains.
+     * @param e
+     *            the single element the new collection contains.
      */
     public FCollection(final T e) {
         add(e);
@@ -72,8 +70,9 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * Create an {@link FCollection} from an array. The order of the elements in
      * the array is preserved in the new collection.
      *
-     * @param c an array, whose elements will be in the collection upon its
-     *          creation.
+     * @param c
+     *            an array, whose elements will be in the collection upon its
+     *            creation.
      */
     public FCollection(final T[] c) {
         this.addAll(Arrays.asList(c));
@@ -83,8 +82,9 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * Create an {@link FCollection} from an {@link Iterable}. The order of the
      * elements in the iterable is preserved in the new collection.
      *
-     * @param i an iterable, whose elements will be in the collection upon its
-     *          creation.
+     * @param i
+     *            an iterable, whose elements will be in the collection upon its
+     *            creation.
      */
     public FCollection(final Iterable<? extends T> i) {
         this.addAll(i);
@@ -93,19 +93,19 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     /**
      * Create an {@link FCollection} from an {@link FCollectionReader}.
      *
-     * @param reader a reader used to populate collection
+     * @param reader
+     *            a reader used to populate collection
      */
     public FCollection(final FCollectionReader<T> reader) {
-        synchronized (lock) {
-            reader.readAll(this);
-        }
+        reader.readAll(this);
     }
 
     /**
      * Check whether an {@link Iterable} contains any iterable, silently
      * returning {@code false} when {@code null} is passed as an argument.
      *
-     * @param iterable a card collection.
+     * @param iterable
+     *            a card collection.
      */
     public static boolean hasElements(final Iterable<?> iterable) {
         return iterable != null && !Iterables.isEmpty(iterable);
@@ -115,8 +115,10 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * Check whether a {@link Collection} contains a particular element, silently
      * returning {@code false} when {@code null} is passed as the first argument.
      *
-     * @param collection a collection.
-     * @param element    a possible element of the collection.
+     * @param collection
+     *            a collection.
+     * @param element
+     *            a possible element of the collection.
      */
     public static <T> boolean hasElement(final Collection<T> collection, final T element) {
         return collection != null && collection.contains(element);
@@ -132,12 +134,12 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
 
     /**
      * <p>This implementation uses the hash code of the backing list.</p>
-     * <p>
+     *
      * {@inheritDoc}
      */
     @Override
     public int hashCode() {
-        return list.get().hashCode();
+        return list.hashCode();
     }
 
     /**
@@ -147,7 +149,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public String toString() {
-        return list.get().toString();
+        return list.toString();
     }
 
     /**
@@ -156,37 +158,35 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public final FCollection<T> clone() {
-        synchronized (lock) {
-            return new FCollection<>(list.get());
-        }
+        return new FCollection<>(list);
     }
 
     /**
      * Get the first object in this {@link FCollection}.
      *
-     * @throws NoSuchElementException if the collection is empty.
+     * @throws NoSuchElementException
+     *             if the collection is empty.
      */
     @Override
     public T getFirst() {
-        synchronized (lock) {
-            if (list.get().isEmpty())
-                return null;
-            return list.get().getFirst();
-        }
+        if (list.isEmpty())
+            return null;
+        return list.get(0);
+        //return list.getFirst();
     }
 
     /**
      * Get the last object in this {@link FCollection}.
      *
-     * @throws NoSuchElementException if the collection is empty.
+     * @throws NoSuchElementException
+     *             if the collection is empty.
      */
     @Override
     public T getLast() {
-        synchronized (lock) {
-            if (list.get().isEmpty())
-                return null;
-            return list.get().getLast();
-        }
+        if (list.isEmpty())
+            return null;
+        return list.get(list.size() - 1);
+        //return list.getLast();
     }
 
     /**
@@ -194,9 +194,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public int size() {
-        synchronized (lock) {
-            return set.get().size();
-        }
+        return set.size();
     }
 
     /**
@@ -204,25 +202,24 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public boolean isEmpty() {
-        return set.get().isEmpty();
+        return set.isEmpty();
     }
 
     public Set<T> asSet() {
-        return set.get();
+        return set;
     }
 
     /**
      * Check whether this collection contains a particular object.
      *
-     * @param o an object.
+     * @param o
+     *            an object.
      */
     @Override
     public boolean contains(final Object o) {
-        synchronized (lock) {
-            if (o == null)
-                return false;
-            return set.get().contains(o);
-        }
+        if (o == null)
+            return false;
+        return set.contains(o);
     }
 
     /**
@@ -230,8 +227,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public Iterator<T> iterator() {
-        return new Itr();
-        //return list.get().iterator();
+        return list.iterator();
     }
 
     /**
@@ -239,9 +235,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public Object[] toArray() {
-        synchronized (lock) {
-            return list.get().toArray();
-        }
+        return list.toArray();
     }
 
     /**
@@ -250,58 +244,52 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     @Override
     @SuppressWarnings("hiding")
     public <T> T[] toArray(final T[] a) {
-        synchronized (lock) {
-            return list.get().toArray(a);
-        }
+        return list.toArray(a);
     }
 
     /**
      * Add an element to this collection, if it isn't already present.
      *
-     * @param e the object to add.
+     * @param e
+     *            the object to add.
      * @return whether the collection changed as a result of this method call.
      */
     @Override
     public boolean add(final T e) {
-        synchronized (lock) {
-            if (e == null)
-                return false;
-            if (set.get().add(e)) {
-                list.get().add(e);
-                return true;
-            }
+        if (e == null)
             return false;
+        if (set.add(e)) {
+            list.add(e);
+            return true;
         }
+        return false;
     }
 
     /**
      * Remove an element from this collection.
      *
-     * @param o the object to remove.
+     * @param o
+     *            the object to remove.
      * @return whether the collection changed as a result of this method call.
      */
     @Override
     public boolean remove(final Object o) {
-        synchronized (lock) {
-            if (o == null)
-                return false;
-            if (set.get().remove(o)) {
-                list.get().remove(o);
-                return true;
-            }
+        if (o == null)
             return false;
+        if (set.remove(o)) {
+            list.remove(o);
+            return true;
         }
+        return false;
     }
 
     @Override
     public boolean removeIf(Predicate<? super T> filter) {
-        synchronized (lock) {
-            if (list.get().removeIf(filter)) {
-                set.get().removeIf(filter);
-                return true;
-            }
-            return false;
+        if (list.removeIf(filter)) {
+            set.removeIf(filter);
+            return true;
         }
+        return false;
     }
 
     /**
@@ -309,9 +297,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public boolean containsAll(final Collection<?> c) {
-        synchronized (lock) {
-            return set.get().containsAll(c);
-        }
+        return set.containsAll(c);
     }
 
     /**
@@ -326,37 +312,35 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * Add all the elements in the specified {@link Iterator} to this
      * collection, in the order in which they appear.
      *
-     * @param i an iterator.
+     * @param i
+     *            an iterator.
      * @return whether this collection changed as a result of this method call.
      * @see #addAll(Collection)
      */
     public boolean addAll(final Iterable<? extends T> i) {
-        synchronized (lock) {
-            boolean changed = false;
-            if (i == null)
-                return false;
-            for (final T e : i) {
-                changed |= add(e);
-            }
-            return changed;
+        boolean changed = false;
+        if (i == null)
+            return false;
+        for (final T e : i) {
+            changed |= add(e);
         }
+        return changed;
     }
 
     /**
      * Add all the elements in the specified array to this collection,
      * respecting the ordering.
      *
-     * @param c an array.
+     * @param c
+     *            an array.
      * @return whether this collection changed as a result of this method call.
      */
     public boolean addAll(final T[] c) {
-        synchronized (lock) {
-            boolean changed = false;
-            for (final T e : c) {
-                changed |= add(e);
-            }
-            return changed;
+        boolean changed = false;
+        for (final T e : c) {
+            changed |= add(e);
         }
+        return changed;
     }
 
     /**
@@ -365,24 +349,22 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     @SuppressWarnings("unchecked")
     @Override
     public boolean addAll(final int index, final Collection<? extends T> c) {
-        synchronized (lock) {
-            if (c == null) {
-                return false;
-            }
-
-            final List<? extends T> list;
-            if (c instanceof List) {
-                list = (List<T>) c;
-            } else {
-                list = Lists.newArrayList(c);
-            }
-
-            boolean changed = false;
-            for (int i = list.size() - 1; i >= 0; i--) { //must add in reverse order so they show up in the right place
-                changed |= insert(index, list.get(i));
-            }
-            return changed;
+        if (c == null) {
+            return false;
         }
+
+        final List<? extends T> list;
+        if (c instanceof List) {
+            list = (List<T>) c;
+        } else {
+            list = Lists.newArrayList(c);
+        }
+
+        boolean changed = false;
+        for (int i = list.size() - 1; i >= 0; i--) { //must add in reverse order so they show up in the right place
+            changed |= insert(index, list.get(i));
+        }
+        return changed;
     }
 
     /**
@@ -396,19 +378,18 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     /**
      * Remove all objects appearing in an {@link Iterable}.
      *
-     * @param c an iterable.
+     * @param c
+     *            an iterable.
      * @return whether this collection changed as a result of this method call.
      */
     public boolean removeAll(final Iterable<?> c) {
-        synchronized (lock) {
-            boolean changed = false;
-            if (c == null)
-                return false;
-            for (final Object o : c) {
-                changed |= remove(o);
-            }
-            return changed;
+        boolean changed = false;
+        if (c == null)
+            return false;
+        for (final Object o : c) {
+            changed |= remove(o);
         }
+        return changed;
     }
 
     /**
@@ -416,13 +397,11 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public boolean retainAll(final Collection<?> c) {
-        synchronized (lock) {
-            if (set.get().retainAll(c)) {
-                list.get().retainAll(c);
-                return true;
-            }
-            return false;
+        if (set.retainAll(c)) {
+            list.retainAll(c);
+            return true;
         }
+        return false;
     }
 
     /**
@@ -430,13 +409,9 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public void clear() {
-        synchronized (lock) {
-            if (set.get().isEmpty()) {
-                return;
-            }
-            set.get().clear();
-            list.get().clear();
-        }
+        if (set.isEmpty()) { return; }
+        set.clear();
+        list.clear();
     }
 
     /**
@@ -444,9 +419,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public T get(final int index) {
-        synchronized (lock) {
-            return list.get().get(index);
-        }
+        return list.get(index);
     }
 
     /**
@@ -456,9 +429,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public T set(final int index, final T element) { //assume this isn't called except when changing list order, so don't worry about updating set
-        synchronized (lock) {
-            return list.get().set(index, element);
-        }
+        return list.set(index, element);
     }
 
     /**
@@ -472,29 +443,29 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
     /**
      * Helper method to insert an element at a particular index.
      *
-     * @param index   the index to insert the element at.
-     * @param element the element to insert.
+     * @param index
+     *            the index to insert the element at.
+     * @param element
+     *            the element to insert.
      * @return whether this collection changed as a result of this method call.
      */
     private boolean insert(int index, final T element) {
-        synchronized (lock) {
-            if (set.get().add(element)) {
-                list.get().add(index, element);
-                return true;
-            }
-            //re-position in list if needed
-            final int oldIndex = list.get().indexOf(element);
-            if (index == oldIndex) {
-                return false;
-            }
-
-            if (index > oldIndex) {
-                index--; //account for being removed
-            }
-            list.get().remove(oldIndex);
-            list.get().add(index, element);
+        if (set.add(element)) {
+            list.add(index, element);
             return true;
         }
+        //re-position in list if needed
+        final int oldIndex = list.indexOf(element);
+        if (index == oldIndex) {
+            return false;
+        }
+
+        if (index > oldIndex) {
+            index--; //account for being removed
+        }
+        list.remove(oldIndex);
+        list.add(index, element);
+        return true;
     }
 
     /**
@@ -502,13 +473,11 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public T remove(final int index) {
-        synchronized (lock) {
-            final T removedItem = list.get().remove(index);
-            if (removedItem != null) {
-                set.get().remove(removedItem);
-            }
-            return removedItem;
+        final T removedItem = list.remove(index);
+        if (removedItem != null) {
+            set.remove(removedItem);
         }
+        return removedItem;
     }
 
     /**
@@ -516,9 +485,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public int indexOf(final Object o) {
-        synchronized (lock) {
-            return list.get().indexOf(o);
-        }
+        return list.indexOf(o);
     }
 
     /**
@@ -526,9 +493,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public int lastIndexOf(final Object o) {
-        synchronized (lock) {
-            return list.get().lastIndexOf(o);
-        }
+        return list.lastIndexOf(o);
     }
 
     /**
@@ -536,8 +501,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public ListIterator<T> listIterator() {
-        return new ListItr(0);
-        //return list.get().listIterator();
+        return list.listIterator();
     }
 
     /**
@@ -545,8 +509,7 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     @Override
     public ListIterator<T> listIterator(final int index) {
-        return new ListItr(index);
-        //return list.get().listIterator(index);
+        return list.listIterator(index);
     }
 
     /**
@@ -554,14 +517,12 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * <b>Note</b> This method breaks the contract of {@link List#subList(int, int)}
      * by returning a static collection, rather than a view, of the sublist.
      * </p>
-     * <p>
+     *
      * {@inheritDoc}
      */
     @Override
     public List<T> subList(final int fromIndex, final int toIndex) {
-        synchronized (lock) {
-            return ImmutableList.copyOf(list.get().subList(fromIndex, toIndex));
-        }
+        return ImmutableList.copyOf(list.subList(fromIndex, toIndex));
     }
 
     /**
@@ -580,30 +541,25 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      * {@inheritDoc}
      */
     public void sort(final Comparator<? super T> comparator) {
-        synchronized (lock) {
-            try {
-                list.get().sort(comparator);
-            } catch (Exception e) {
-                System.err.println("FCollection failed to sort: \n" + comparator + "\n" + e.getMessage());
-            }
+        try {
+            list.sort(comparator);
+        } catch (Exception e) {
+            System.err.println("FCollection failed to sort: \n" + comparator + "\n" + e.getMessage());
         }
     }
 
     @Override
     public T get(final T obj) {
-        synchronized (lock) {
-            if (obj == null) {
-                return null;
-            }
-            for (T x : this) {
-                if (x.equals(obj)) {
-                    return x;
-                }
-            }
-            return obj;
+        if (obj == null) {
+            return null;
         }
+        for(T x : this) {
+            if (x.equals(obj)) {
+                return x;
+            }
+        }
+        return obj;
     }
-
     /**
      * An unmodifiable, empty {@link FCollection}. Overrides all methods with
      * default implementations suitable for an empty collection, to improve
@@ -611,155 +567,93 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
      */
     public static class EmptyFCollection<T> extends FCollection<T> {
         private static final long serialVersionUID = 8667965158891635997L;
-
         public EmptyFCollection() {
             super();
         }
-
-        @Override
-        public final void add(final int index, final T element) {
+        @Override public final void add(final int index, final T element) {
         }
-
-        @Override
-        public final boolean add(final T e) {
+        @Override public final boolean add(final T e) {
             return false;
         }
-
-        @Override
-        public final boolean addAll(final Collection<? extends T> c) {
+        @Override public final boolean addAll(final Collection<? extends T> c) {
             return false;
         }
-
-        @Override
-        public final boolean addAll(final int index, final Collection<? extends T> c) {
+        @Override public final boolean addAll(final int index, final Collection<? extends T> c) {
             return false;
         }
-
-        @Override
-        public final boolean addAll(final Iterable<? extends T> i) {
+        @Override public final boolean addAll(final Iterable<? extends T> i) {
             return false;
         }
-
-        @Override
-        public final boolean addAll(final T[] c) {
+        @Override public final boolean addAll(final T[] c) {
             return false;
         }
-
-        @Override
-        public final void clear() {
+        @Override public final void clear() {
         }
-
-        @Override
-        public final boolean contains(final Object o) {
+        @Override public final boolean contains(final Object o) {
             return false;
         }
-
-        @Override
-        public final boolean containsAll(final Collection<?> c) {
+        @Override public final boolean containsAll(final Collection<?> c) {
             return c.isEmpty();
         }
-
-        @Override
-        public final T get(final int index) {
+        @Override public final T get(final int index) {
             throw new IndexOutOfBoundsException("Any index is out of bounds for an empty collection");
         }
-
-        @Override
-        public final T getFirst() {
+        @Override public final T getFirst() {
             throw new NoSuchElementException("Collection is empty");
         }
-
-        @Override
-        public final T getLast() {
+        @Override public final T getLast() {
             throw new NoSuchElementException("Collection is empty");
         }
-
-        @Override
-        public final int indexOf(final Object o) {
+        @Override public final int indexOf(final Object o) {
             return -1;
         }
-
-        @Override
-        public final boolean isEmpty() {
+        @Override public final boolean isEmpty() {
             return true;
         }
-
-        @Override
-        public final Iterator<T> iterator() {
+        @Override public final Iterator<T> iterator() {
             return Collections.emptyIterator();
         }
-
-        @Override
-        public final int lastIndexOf(final Object o) {
+        @Override public final int lastIndexOf(final Object o) {
             return -1;
         }
-
-        @Override
-        public final ListIterator<T> listIterator() {
+        @Override public final ListIterator<T> listIterator() {
             return Collections.emptyListIterator();
         }
-
-        @Override
-        public final ListIterator<T> listIterator(final int index) {
+        @Override public final ListIterator<T> listIterator(final int index) {
             return Collections.emptyListIterator();
         }
-
-        @Override
-        public final T remove(final int index) {
+        @Override public final T remove(final int index) {
             throw new IndexOutOfBoundsException("Any index is out of bounds for an empty collection");
         }
-
-        @Override
-        public final boolean remove(final Object o) {
+        @Override public final boolean remove(final Object o) {
             return false;
         }
-
-        @Override
-        public boolean removeAll(final Collection<?> c) {
+        @Override public boolean removeAll(final Collection<?> c) {
             return false;
         }
-
-        @Override
-        public final boolean removeAll(final Iterable<?> c) {
+        @Override public final boolean removeAll(final Iterable<?> c) {
             return false;
         }
-
-        @Override
-        public final boolean retainAll(final Collection<?> c) {
+        @Override public final boolean retainAll(final Collection<?> c) {
             return false;
         }
-
-        @Override
-        public final T set(final int index, final T element) {
+        @Override public final T set(final int index, final T element) {
             throw new IndexOutOfBoundsException("Any index is out of bounds for an empty collection");
         }
-
-        @Override
-        public final int size() {
+        @Override public final int size() {
             return 0;
         }
-
-        @Override
-        public final void sort() {
+        @Override public final void sort() {
         }
-
-        @Override
-        public final void sort(final Comparator<? super T> comparator) {
+        @Override public final void sort(final Comparator<? super T> comparator) {
         }
-
-        @Override
-        public final List<T> subList(final int fromIndex, final int toIndex) {
+        @Override public final List<T> subList(final int fromIndex, final int toIndex) {
             if (fromIndex == 0 && toIndex == 0) {
                 return this;
             }
             throw new IndexOutOfBoundsException("Any index is out of bounds for an empty collection");
         }
-
-        @Override
-        public final Object[] toArray() {
-            return ArrayUtils.EMPTY_OBJECT_ARRAY;
-        }
-
+        @Override public final Object[] toArray() { return ArrayUtils.EMPTY_OBJECT_ARRAY; }
         @Override
         @SuppressWarnings("hiding")
         public final <T> T[] toArray(final T[] a) {
@@ -768,101 +662,8 @@ public class FCollection<T> implements List<T>, /*Set<T>,*/ FCollectionView<T>, 
             }
             return a;
         }
-
-        @Override
-        public final String toString() {
+        @Override public final String toString() {
             return "[]";
-        }
-    }
-
-    private class Itr implements Iterator<T> {
-        protected int cursor;
-        protected int lastRet;
-        final FCollection l;
-
-        public Itr() {
-            cursor = 0;
-            lastRet = -1;
-            l = FCollection.this.clone();
-        }
-
-
-        @Override
-        public boolean hasNext() {
-            return cursor < l.size();
-        }
-
-        @Override
-        public T next() {
-            int i = cursor;
-            if (i >= l.size()) {
-                throw new NoSuchElementException();
-            }
-            cursor = i + 1;
-            return (T) l.get(lastRet = i);
-        }
-
-        @Override
-        public void remove() {
-            if (lastRet < 0) {
-                throw new IllegalStateException();
-            }
-
-            l.remove(lastRet);
-            FCollection.this.remove(lastRet);
-            cursor = lastRet;
-            lastRet = -1;
-        }
-    }
-
-    public class ListItr extends Itr implements ListIterator<T> {
-        ListItr(int index) {
-            super();
-            cursor = index;
-        }
-
-        @Override
-        public boolean hasPrevious() {
-            return cursor > 0;
-        }
-
-        @Override
-        public int nextIndex() {
-            return cursor;
-        }
-
-        @Override
-        public int previousIndex() {
-            return cursor - 1;
-        }
-
-        @Override
-        public T previous() {
-            int i = cursor - 1;
-            if (i < 0) {
-                throw new NoSuchElementException();
-            }
-            cursor = i;
-            return (T) l.get(lastRet = i);
-        }
-
-        @Override
-        public void set(T e) {
-            if (lastRet < 0) {
-                throw new IllegalStateException();
-            }
-
-            l.set(lastRet, e);
-            FCollection.this.set(lastRet, e);
-        }
-
-        @Override
-        public void add(T e) {
-            int i = cursor;
-            l.add(i, e);
-            FCollection.this.add(i, e);
-            cursor = i + 1;
-            lastRet = -1;
         }
     }
 }
